[package]
name = "brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.*"
notify="4.0.17"
once_cell="1.8.0"
regex = "1"
tempfile = "3.2.0"
serde = "1.0"
serde_json = "1.0.59"
sqlite = "0.26.0"
rocket = { version = "0.5.0-rc.1", features = ["tls", "json"] }
tantivy = "0.16.1"
